style.css
@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
*
{
    margin:0;
    padding:0;
    box-sizing:border-box;
    font-family: 'Poppins', sans-serif;
    /*
    border: 1px dashed black;
     */
}

h2 {
    font-size: 2.5em;
    font-size: 2vw;
    color: black;
    font-weight: 500;
    line-height: 1.5em;
}
h2 span {
    font-size: 1.25em;
    font-size: 3.5vw;
    font-weight: 500;
}

header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    padding: 30px 100px;
    background: #111111;
    z-index: 1000;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
header ul {
    margin-bottom: 0;
    position: relative;
    display: flex;
}
header ul li
{
    position: relative;
    list-style: none;
}
header ul li a {
    position: relative;
    display: inline-block;
    margin: 0 15px;
    color: #fff;
    text-decoration: none;
}

section {
    padding: 30px 100px;
}

a:hover {
    color: darkgrey;
    text-decoration: none;
}

a {
    color: #212529;
    text-decoration: none;
}

.container a:hover {
    color: dimgray;
    text-decoration: none;
}

.background-spline {
    position: absolute;
    background: #fff96a;
}

.bottom-buffer{
    padding-bottom: 30px;
}

.top-buffer{
    padding-top: 30px;
}

.banner {
    position: relative;
    background: none;
    background-size: cover;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.banner h3 {
    font-size: 1.5em;
    font-size: 1.75vw;
    color: black;
    font-weight: 500;
    max-width: 75vw;
}
.banner img
{
    display: flex;
    margin-left: 3%;
    justify-content: right;
    align-items: center;
    padding-left: 100px;
    padding-right: 40px;
}


.btn {
    position: relative;
    background: #111111;
    display: inline-block;
    color: #fff;
    margin-top: 10px;
    padding: 10px 30px;
    font-size: 18px;
    text-transform: uppercase;
    text-decoration: none;
    letter-spacing: 2px;
    font-weight: 500;
}

.experience {
    position:relative;
}
.textBx {
    padding-right: 20px;
    padding-top: 20px;
}
.content {
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.contentBx {
    padding-right: 30px;
}
.contentBx h3 {
    font-size: 24px;
    margin-bottom: 10px;
}
.descriptionpic img {
    max-width: 100%;
    border-radius: 2%;
}
.w55 {
    padding-left: 20px;

}

.project:hover .project_text {
    opacity: 1;
    filter: alpha(opacity=100);
    visibility: visible;
}
.project_content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-bottom: 100px;
}
.project-pic img {
    border-radius: 5%;
}

.project-pic h3 {
    padding-top: 20px;
}

.project_description_right {
    width: 100%;
    text-align: right;
    padding-right: 20px;
}
.project_description_left {
    width: 100%;
    text-align: left;
    padding-left: 20px;
}
.contactSocial {
    padding-top: 7rem;
    padding-bottom: 30px;
}

.position-setter {
    position: relative;
}

footer {
    background: #111111;
    position: absolute;
    width: 100%;
    text-align: center;
    padding: 30px 100px;
    align-items: center;
}

footer p {
    position: relative;
    display: inline-block;
    margin: 0;
    color: #fff;
    text-decoration: none;
}

